Bug 526375.  Enforce always appending to the last continuation for {ib} splits.  r=roc